--- a/templates/rooms/home.html
+++ b/templates/rooms/home.html
@@ -3,9 +3,24 @@
 {% block page_name %}
     Home
 {% endblock page_name %}
-    Home
+
 {% block content %}
     {% for room in rooms  %}
         <h1>{{room.name}} / ${{room.price}}</h1>
+    {% endfor %}
+
+    <h5>
+        {%if page is not 1%}
+            <a href="?page={{page|add:-1}}">Previous</a>
+        {%endif%}
+        Page {{page}} of {{page_count}}
+        {%if not page == page_count%}
+            <a href="?page={{page|add:+1}}">Next</a>
+        {%endif%}
+        
+    </h5>
+
+    {% for page in page_range %}
+        <a href="?page={{page}}">{{page}}</a>
     {% endfor %}
 {% endblock content %}
