--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -4,8 +4,12 @@
     Home
 {% endblock page_name %}
 
+
 {% block content %}
-    {% for room in object_list  %}
+
+{{now}}
+
+    {% for room in rooms  %}
         <h1>{{room.name}} / ${{room.price}}</h1>
     {% endfor %}
 
