--- a/templates/404.html
+++ b/templates/404.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block page_name %}
-    Home
-{% endblock page_name %}
+{% block page_title %}
+    Error
+{% endblock page_title %}
 
 
 {% block content %}
