--- a/templates/rooms/search.html
+++ b/templates/rooms/search.html
@@ -60,7 +60,15 @@
                 {% for amenity in amenities %}
                     <li>
                         <label for="a_{{amenity.pk}}">{{amenity.name}}</label>
-                        <input id="a_{{amenity.pk}}" name="amenities" type="checkbox" value={{amenity.pk}}/>
+                        <input 
+                            id="a_{{amenity.pk}}"
+                            name="amenities"
+                            type="checkbox"
+                            value={{amenity.pk}}
+                            {% if amenity.pk|slugify in s_amenities %}
+                            checked
+                            {% endif %}
+                        />
                     </li>
                 {% endfor %}
             </ul>
@@ -71,7 +79,15 @@
                 {% for facility in facilities %}
                     <li>
                         <label for="f_{{facility.pk}}">{{facility.name}}</label>
-                        <input id="f_{{facility.pk}}" name="facilities" type="checkbox" value={{facility.pk}}/>
+                        <input 
+                            id="f_{{facility.pk}}"
+                            name="facilities"
+                            type="checkbox"
+                            value={{facility.pk}}
+                            {% if facility.pk|slugify in s_facilities %}
+                            checked
+                            {% endif %}
+                        />
                     </li>
                 {% endfor %}
             </ul>
