--- a/templates/rooms/search.html
+++ b/templates/rooms/search.html
@@ -55,6 +55,14 @@
             <input value="{{baths}}" type="number" name="baths" id="baths" placeholder="Baths" />
         </div>
         <div>
+            <label for="instant">Instant Book Only?</label>
+            <input type="checkbox" name="instant" id="instant" {%if instant %}checked{% endif %}/>
+        </div>
+        <div>
+            <label for="super_host">By Superhost only?</label>
+            <input type="checkbox" name="super_host" id="super_host" {%if super_host %}checked{% endif %}/>
+        </div>
+        <div>
             <h3>Amenities</h3>
             <ul>
                 {% for amenity in amenities %}
