--- a/templates/base.html
+++ b/templates/base.html
@@ -8,15 +8,21 @@
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
     <title>{% block page_title %}{% endblock page_title %} | Nbnb</title>
   </head>
-  <body>
-    <header>
-        
+  <body class="text-gray-800">
+    <header class="container max-w-full flex justify-between px-6 h-20 border- border-gray-400">
+        <div class="flex items-center">
+          <a href="{% url "core:home" %}" class="mr-6">
+            <img class="w-6" src="{% static 'img/logo.png' %}" />
+          </a>
+          
+          {% block search-bar %}
+              <form method="get" action="{% url "rooms:search" %}">
+                  <input class="border px-2 py-1 rounded-sm" name="city" placeholder="Search By City" />
+              </form>
+          {% endblock search-bar %}
+          
+        </div>
         {% include "partials/nav.html" %}
-        {% block search-bar %}
-            <form method="get" action="{% url "rooms:search" %}">
-                <input value="Seoul" name="city" placeholder="Search By City" />
-            </form>
-        {% endblock search-bar %}
     </header>
 
     {% include "partials/footer.html" %}
