--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,11 +1,11 @@
-
-    <a href="{% url "core:home" %}">Nbnb</a>
-    <ul>
+{% load static %}
+    
+    <ul class="flex items-center text-sm font-medium">
         {% if user.is_authenticated %}
-            <li><a href="{%url "users:logout" %}">Logout</a></li>
+            <li class="ml-8"><a href="{%url "users:logout" %}">Logout</a></li>
         {% else %}
-            <li><a href="{% url "users:login" %}">Login</a></li>
-            <li><a href="{% url "users:signup" %}">Signup</a></li>
+            <li class="ml-8"><a href="{% url "users:login" %}">Login</a></li>
+            <li class="ml-8"><a href="{% url "users:signup" %}">Signup</a></li>
         {% endif %}
         
     </ul>
