--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,9 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-.box {
-  font-size: 20px;
-  .child {
-    width: 0.5em;
+.search-box {
+  transition: box-shadow 0.2s linear;
+}
+
+.nav_link {
+  @apply ml-8 border-b-2 border-white h-full flex items-center;
+  a {
+    @apply py-10 px-5;
+  }
+  &:hover {
+    @apply border-gray-600;
   }
 }
