--- a/templates/base.html
+++ b/templates/base.html
@@ -10,14 +10,14 @@
   </head>
   <body class="text-gray-800">
     <header class="container max-w-full flex justify-between px-6 h-20 border- border-gray-400">
-        <div class="flex items-center">
+        <div class="flex items-center w-1/3">
           <a href="{% url "core:home" %}" class="mr-6">
             <img class="w-6" src="{% static 'img/logo.png' %}" />
           </a>
           
           {% block search-bar %}
-              <form method="get" action="{% url "rooms:search" %}">
-                  <input class="border px-2 py-1 rounded-sm" name="city" placeholder="Search By City" />
+              <form method="get" action="{% url "rooms:search" %}" class="w-9/12">
+                  <input class="w-full search-box border px-5 text-sm font-medium text-gray-900 placeholder-gray-700 py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none" name="city" placeholder="Search By City" />
               </form>
           {% endblock search-bar %}
           
