--- a/templates/partials/social_login.html
+++ b/templates/partials/social_login.html
@@ -1,9 +1,9 @@
-<div>
-    <a href="{% url 'users:github-login'%}">
-        continue with Github
+<div class="flex flex-col w-full">
+    <a href="{% url 'users:github-login'%}" class="w-full text-lg border-2 border-gray-700 font-medium text-gray-700 mb-2 text-center rounded-sm py-5">
+        <i class="fab fa-github-alt mr-2 fa-lg"></i>  Continue with Github
     </a>
     <a>
-    <a href="{% url 'users:kakao-login' %}">
-        continue with Kakao
+    <a href="{% url 'users:kakao-login' %}" class="w-full text-lg border border-yellow-700 font-medium text-yellow-800 mb-2 text-center rounded-sm py-5 bg-yellow-400">
+        <i class="fas fa-comment mr-2 fa-lg"></i>  Continue with Kakao
     </a>
 </div>
