--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,6 +1,5 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
 
 .search-box {
   transition: box-shadow 0.2s linear;
@@ -26,3 +25,19 @@ input {
     @apply .outline-none border-teal-500;
   }
 }
+
+form {
+  .input {
+    @apply mb-3;
+    &.has_error {
+      input {
+        @apply bg-red-200 border-gray-400;
+        &:focus {
+          @apply border-gray-600;
+        }
+      }
+    }
+  }
+}
+
+@tailwind utilities;
