--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -13,12 +13,12 @@
 
 
 
-        <form method="POST" action="{% url "users:login" %}" class="w-full flex-row">
+        <form method="POST" action="{% url "users:login" %}" class="flex-row">
             {% csrf_token %}
-            <input type="email" placeholder="Email" class="mb-3">
-            <input type="email" placeholder="Password" class="mb-3">
+            {{form.email}}
+            {{form.password}}
             
-            <button class="btn bg-red-600 text-white">Login</button>
+            <button class="btn bg-red500 text-white">Login</button>
         </form>
         <div class="mt-5">
             <span class="mr-2">Don't have an account?</span><a class="text-teal-500 font-medium" href="{% url 'users:signup' %}">Sign up</a>
