--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -11,15 +11,8 @@
     <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
         {% include 'partials/social_login.html' %}
 
+        {% include 'mixins/auth/auth_form.html' with form=form cta="Login"%}
 
-
-        <form method="POST" action="{% url "users:login" %}" class="flex-row">
-            {% csrf_token %}
-            {{form.email}}
-            {{form.password}}
-            
-            <button class="btn bg-red500 text-white">Login</button>
-        </form>
         <div class="mt-5">
             <span class="mr-2">Don't have an account?</span><a class="text-teal-500 font-medium" href="{% url 'users:signup' %}">Sign up</a>
         </div>
