--- a/templates/users/update_profile.html
+++ b/templates/users/update_profile.html
@@ -11,8 +11,10 @@
     <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
         {% include 'mixins/auth/auth_form.html' with form=form cta="Update profile"%}
 
+        {% if object.login_method == "password" %}
         <div class="mt-5">
-            <span class="mr-2">Don't have an account?</span><a class="text-teal-500 font-medium" href="{% url 'users:signup' %}">Sign up</a>
+            <a href="{% url 'users:password' %}" class="text-teal-500 font-medium">Change Password</a>
         </div>
+        {% endif %}
     </div>
 {% endblock content %} 
